--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "serve": "webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +20,14 @@
     "html-webpack-plugin": "^5.5.0",
     "jsx-ast-utils": "^3.3.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
     "@babel/generator": "^7.18.6",
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.18.6",
+    "babel-types": "^6.26.0",
     "esbuild": "^0.14.48",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
